# barqx30

backend/barq-engine/: Cargo.toml  barq-engine.service  barqtest.aqlaan.com.nginx.conf  cargo_check.sh  config.toml  test_stream.rs
backend/barq-engine/data/aqlaan/: README.md
backend/barq-engine/src/: main.rs  test_body.rs
backend/barq-engine/src/api/: buckets.rs  mod.rs  users.rs
backend/barq-engine/src/auth/: mod.rs
backend/barq-engine/src/cache/: mod.rs
backend/barq-engine/src/cdn/: cache_warming.rs  edge_node.rs  geo_routing.rs  mod.rs
backend/barq-engine/src/cli/: mod.rs
backend/barq-engine/src/config/: mod.rs
backend/barq-engine/src/database/: mod.rs  mod_old.rs
backend/barq-engine/src/entities/: buckets.rs  mod.rs  objects.rs  sessions.rs  users.rs
backend/barq-engine/src/erasure/: mod.rs
backend/barq-engine/src/metadata/: mod.rs
backend/barq-engine/src/models/: mod.rs
backend/barq-engine/src/network/: middleware.rs  mod.rs  s3_handlers.rs
backend/barq-engine/src/storage/: buffer.rs  engine.rs  io.rs  mod.rs
backend/migrations/: 20260407_init.sql  20260408_add_roles.sql
barq-dashboard/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
barq-dashboard/src/: index.html  styles.scss
barq-dashboard/src/app/: app.spec.ts  app.ts
barq-dashboard/src/app/components/dashboard/: dashboard.component.ts
barq-dashboard/src/app/components/login/: login.component.ts
barq-dashboard/src/app/services/: auth.service.ts  storage.service.ts
docs/: AWS_S3_vs_BARQX30_Comparison.md  barqx30.md
