[package]
name = "barq-x30-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1.42", features = ["full", "io-util"] }

# Web Framework & S3 Compatibility
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.5", features = ["full"] }

# Security & Authentication
jsonwebtoken = "9.3"
sha2 = "0.11"
argon2 = "0.5"
rand = "0.8"

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = "1.1"

# Storage & Metadata
sled = "0.34"

# Caching & CDN
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
lru = "0.12"
reqwest = { version = "0.12", features = ["json"] }

# Erasure Coding
reed-solomon-erasure = "6.0"

# Concurrency & Performance
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = "0.8"

# Memory & Buffer Management
aligned = "0.4"
bytes = "1.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Configuration
config = "0.14"
toml = "0.8"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# System & Hardware
hwloc2 = "2.2"
libc = "0.2"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"
futures-util = "0.3.32"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
